--- a/sys/modules/dtrace/Makefile
+++ b/sys/modules/dtrace/Makefile
@@ -19,15 +19,11 @@ SUBDIR+=	fasttrap fbt systrace_linux
 SUBDIR+=	systrace_linux32
 .endif
 .if ${MACHINE_CPUARCH} == "amd64" || \
-    ${MACHINE_CPUARCH} == "aarch64" || \
-    ${MACHINE_ARCH} == "mips64" || \
-    ${MACHINE_ARCH} == "powerpc64"
+    ${MACHINE_CPUARCH} == "aarch64" 
 SUBDIR+=	systrace_freebsd32
 .endif
 .if ${MACHINE_CPUARCH} == "aarch64" || \
     ${MACHINE_CPUARCH} == "arm" || \
-    ${MACHINE_CPUARCH} == "mips" || \
-    ${MACHINE_CPUARCH} == "powerpc" || \
     ${MACHINE_CPUARCH} == "riscv"
 SUBDIR+=	fbt
 .endif
