--- a/sys/modules/uart/Makefile
+++ b/sys/modules/uart/Makefile
@@ -12,8 +12,7 @@ uart_bus_ebus=	uart_bus_ebus.c
 .endif
 
 .if ${MACHINE_CPUARCH} == "aarch64" || ${MACHINE_CPUARCH} == "arm" || \
-    ${MACHINE_CPUARCH} == "powerpc" || ${MACHINE_CPUARCH} == "riscv" || \
-    ${MACHINE_CPUARCH} == "sparc64"
+    ${MACHINE_CPUARCH} == "riscv"
 ofw_bus_if=	ofw_bus_if.h
 .endif
 
