--- a/lib/clang/libllvm/Makefile
+++ b/lib/clang/libllvm/Makefile
@@ -7,16 +7,16 @@ INTERNALLIB=
 CFLAGS+=	-I${.OBJDIR}
 
 .if ${MK_LLVM_TARGET_AARCH64} == "no" && ${MK_LLVM_TARGET_ARM} == "no" && \
-    ${MK_LLVM_TARGET_BPF} == "no" && ${MK_LLVM_TARGET_MIPS} == "no" && \
+    ${MK_LLVM_TARGET_BPF} == "no" && \
     ${MK_LLVM_TARGET_RISCV} == "no" && \
     ${MK_LLVM_TARGET_X86} == "no"
 .error Please enable at least one of: MK_LLVM_TARGET_AARCH64,\
- MK_LLVM_TARGET_ARM, MK_LLVM_TARGET_BPF, MK_LLVM_TARGET_MIPS, \
- MK_LLVM_TARGET_POWERPC, MK_LLVM_TARGET_RISCV, \
+ MK_LLVM_TARGET_ARM, MK_LLVM_TARGET_BPF, \
+ MK_LLVM_TARGET_RISCV, \
  or MK_LLVM_TARGET_X86
 .endif
 
-.for arch in AArch64 ARM BPF Mips RISCV X86
+.for arch in AArch64 ARM BPF RISCV X86
 . if ${MK_LLVM_TARGET_${arch:tu}} != "no"
 CFLAGS+=	-I${LLVM_SRCS}/lib/Target/${arch}
 . endif
@@ -1217,63 +1217,6 @@ SRCS_MIN+=	Target/BPF/MCTargetDesc/BPFMCCodeEmitter.cpp
 SRCS_MIN+=	Target/BPF/MCTargetDesc/BPFMCTargetDesc.cpp
 SRCS_MIN+=	Target/BPF/TargetInfo/BPFTargetInfo.cpp
 .endif # MK_LLVM_TARGET_BPF
-.if ${MK_LLVM_TARGET_MIPS} != "no"
-SRCS_MIN+=	Target/Mips/AsmParser/MipsAsmParser.cpp
-SRCS_XDW+=	Target/Mips/Disassembler/MipsDisassembler.cpp
-SRCS_MIN+=	Target/Mips/MCTargetDesc/MipsABIFlagsSection.cpp
-SRCS_MIN+=	Target/Mips/MCTargetDesc/MipsABIInfo.cpp
-SRCS_MIN+=	Target/Mips/MCTargetDesc/MipsAsmBackend.cpp
-SRCS_MIN+=	Target/Mips/MCTargetDesc/MipsELFObjectWriter.cpp
-SRCS_MIN+=	Target/Mips/MCTargetDesc/MipsELFStreamer.cpp
-SRCS_MIN+=	Target/Mips/MCTargetDesc/MipsInstPrinter.cpp
-SRCS_MIN+=	Target/Mips/MCTargetDesc/MipsMCAsmInfo.cpp
-SRCS_MIN+=	Target/Mips/MCTargetDesc/MipsMCCodeEmitter.cpp
-SRCS_MIN+=	Target/Mips/MCTargetDesc/MipsMCExpr.cpp
-SRCS_MIN+=	Target/Mips/MCTargetDesc/MipsMCTargetDesc.cpp
-SRCS_MIN+=	Target/Mips/MCTargetDesc/MipsNaClELFStreamer.cpp
-SRCS_MIN+=	Target/Mips/MCTargetDesc/MipsOptionRecord.cpp
-SRCS_MIN+=	Target/Mips/MCTargetDesc/MipsTargetStreamer.cpp
-SRCS_MIN+=	Target/Mips/MicroMipsSizeReduction.cpp
-SRCS_MIN+=	Target/Mips/Mips16FrameLowering.cpp
-SRCS_MIN+=	Target/Mips/Mips16HardFloat.cpp
-SRCS_MIN+=	Target/Mips/Mips16HardFloatInfo.cpp
-SRCS_MIN+=	Target/Mips/Mips16ISelDAGToDAG.cpp
-SRCS_MIN+=	Target/Mips/Mips16ISelLowering.cpp
-SRCS_MIN+=	Target/Mips/Mips16InstrInfo.cpp
-SRCS_MIN+=	Target/Mips/Mips16RegisterInfo.cpp
-SRCS_MIN+=	Target/Mips/MipsAnalyzeImmediate.cpp
-SRCS_MIN+=	Target/Mips/MipsAsmPrinter.cpp
-SRCS_MIN+=	Target/Mips/MipsBranchExpansion.cpp
-SRCS_MIN+=	Target/Mips/MipsCCState.cpp
-SRCS_MIN+=	Target/Mips/MipsCallLowering.cpp
-SRCS_MIN+=	Target/Mips/MipsConstantIslandPass.cpp
-SRCS_MIN+=	Target/Mips/MipsDelaySlotFiller.cpp
-SRCS_MIN+=	Target/Mips/MipsExpandPseudo.cpp
-SRCS_MIN+=	Target/Mips/MipsFastISel.cpp
-SRCS_MIN+=	Target/Mips/MipsFrameLowering.cpp
-SRCS_MIN+=	Target/Mips/MipsISelDAGToDAG.cpp
-SRCS_MIN+=	Target/Mips/MipsISelLowering.cpp
-SRCS_MIN+=	Target/Mips/MipsInstrInfo.cpp
-SRCS_MIN+=	Target/Mips/MipsInstructionSelector.cpp
-SRCS_MIN+=	Target/Mips/MipsLegalizerInfo.cpp
-SRCS_MIN+=	Target/Mips/MipsMCInstLower.cpp
-SRCS_MIN+=	Target/Mips/MipsMachineFunction.cpp
-SRCS_MIN+=	Target/Mips/MipsModuleISelDAGToDAG.cpp
-SRCS_MIN+=	Target/Mips/MipsOptimizePICCall.cpp
-SRCS_MIN+=	Target/Mips/MipsOs16.cpp
-SRCS_MIN+=	Target/Mips/MipsPreLegalizerCombiner.cpp
-SRCS_MIN+=	Target/Mips/MipsRegisterBankInfo.cpp
-SRCS_MIN+=	Target/Mips/MipsRegisterInfo.cpp
-SRCS_MIN+=	Target/Mips/MipsSEFrameLowering.cpp
-SRCS_MIN+=	Target/Mips/MipsSEISelDAGToDAG.cpp
-SRCS_MIN+=	Target/Mips/MipsSEISelLowering.cpp
-SRCS_MIN+=	Target/Mips/MipsSEInstrInfo.cpp
-SRCS_MIN+=	Target/Mips/MipsSERegisterInfo.cpp
-SRCS_MIN+=	Target/Mips/MipsSubtarget.cpp
-SRCS_MIN+=	Target/Mips/MipsTargetMachine.cpp
-SRCS_MIN+=	Target/Mips/MipsTargetObjectFile.cpp
-SRCS_MIN+=	Target/Mips/TargetInfo/MipsTargetInfo.cpp
-.endif # MK_LLVM_TARGET_MIPS
 .if ${MK_LLVM_TARGET_RISCV} != "no"
 SRCS_MIN+=	Target/RISCV/AsmParser/RISCVAsmParser.cpp
 SRCS_MIN+=	Target/RISCV/Disassembler/RISCVDisassembler.cpp
@@ -1740,7 +1683,7 @@ TGHDRS+=	llvm/IR/IntrinsicImpl.inc
 
 .for arch in \
 	AArch64/aarch64 AMDGPU/amdgcn ARM/arm BPF/bpf Hexagon/hexagon \
-	Mips/mips NVPTX/nvvm RISCV/riscv S390/s390 \
+	NVPTX/nvvm RISCV/riscv \
 	VE/ve WebAssembly/wasm X86/x86 XCore/xcore
 llvm/IR/Intrinsics${arch:H}.h: ${LLVM_SRCS}/include/llvm/IR/Intrinsics.td
 	${LLVM_TBLGEN} -gen-intrinsic-enums -intrinsic-prefix=${arch:T} \
@@ -1857,21 +1800,6 @@ TGHDRS+=	BPFGenMCCodeEmitter.inc
 TGHDRS+=	BPFGenRegisterInfo.inc
 TGHDRS+=	BPFGenSubtargetInfo.inc
 .endif # MK_LLVM_TARGET_BPF
-.if ${MK_LLVM_TARGET_MIPS} != "no"
-TGHDRS+=	MipsGenAsmMatcher.inc
-TGHDRS+=	MipsGenAsmWriter.inc
-TGHDRS+=	MipsGenCallingConv.inc
-TGHDRS+=	MipsGenDAGISel.inc
-TGHDRS+=	MipsGenDisassemblerTables.inc
-TGHDRS+=	MipsGenFastISel.inc
-TGHDRS+=	MipsGenGlobalISel.inc
-TGHDRS+=	MipsGenInstrInfo.inc
-TGHDRS+=	MipsGenMCCodeEmitter.inc
-TGHDRS+=	MipsGenMCPseudoLowering.inc
-TGHDRS+=	MipsGenRegisterBank.inc
-TGHDRS+=	MipsGenRegisterInfo.inc
-TGHDRS+=	MipsGenSubtargetInfo.inc
-.endif # MK_LLVM_TARGET_MIPS
 .if ${MK_LLVM_TARGET_RISCV} != "no"
 TGHDRS+=	RISCVGenAsmMatcher.inc
 TGHDRS+=	RISCVGenAsmWriter.inc
