--- a/lib/clang/liblldb/Makefile
+++ b/lib/clang/liblldb/Makefile
@@ -315,11 +315,15 @@ SRCS+=		Plugins/ABI/AArch64/ABIAArch64.cpp
 SRCS+=		Plugins/ABI/AArch64/ABISysV_arm64.cpp
 SRCS+=		Plugins/ABI/ARM/ABIARM.cpp
 SRCS+=		Plugins/ABI/ARM/ABISysV_arm.cpp
+SRCS+=		Plugins/ABI/Mips/ABIMips.cpp
+SRCS+=		Plugins/ABI/Mips/ABISysV_mips.cpp
+SRCS+=		Plugins/ABI/Mips/ABISysV_mips64.cpp
 SRCS+=		Plugins/ABI/X86/ABISysV_i386.cpp
 SRCS+=		Plugins/ABI/X86/ABISysV_x86_64.cpp
 SRCS+=		Plugins/ABI/X86/ABIX86.cpp
 SRCS+=		Plugins/Architecture/AArch64/ArchitectureAArch64.cpp
 SRCS+=		Plugins/Architecture/Arm/ArchitectureArm.cpp
+SRCS+=		Plugins/Architecture/Mips/ArchitectureMips.cpp
 SRCS+=		Plugins/Disassembler/LLVMC/DisassemblerLLVMC.cpp
 SRCS+=		Plugins/DynamicLoader/POSIX-DYLD/DYLDRendezvous.cpp
 SRCS+=		Plugins/DynamicLoader/POSIX-DYLD/DynamicLoaderPOSIXDYLD.cpp
@@ -411,6 +415,7 @@ SRCS+=		Plugins/Process/FreeBSD/NativeProcessFreeBSD.cpp
 SRCS+=		Plugins/Process/FreeBSD/NativeRegisterContextFreeBSD.cpp
 SRCS+=		Plugins/Process/FreeBSD/NativeRegisterContextFreeBSD_arm.cpp
 SRCS+=		Plugins/Process/FreeBSD/NativeRegisterContextFreeBSD_arm64.cpp
+SRCS+=		Plugins/Process/FreeBSD/NativeRegisterContextFreeBSD_mips64.cpp
 SRCS+=		Plugins/Process/FreeBSD/NativeRegisterContextFreeBSD_x86_64.cpp
 SRCS+=		Plugins/Process/FreeBSD/NativeThreadFreeBSD.cpp
 SRCS+=		Plugins/Process/POSIX/CrashReason.cpp
@@ -425,6 +430,7 @@ SRCS+=		Plugins/Process/Utility/HistoryThread.cpp
 SRCS+=		Plugins/Process/Utility/HistoryUnwind.cpp
 SRCS+=		Plugins/Process/Utility/InferiorCallPOSIX.cpp
 SRCS+=		Plugins/Process/Utility/LinuxSignals.cpp
+SRCS+=		Plugins/Process/Utility/MipsLinuxSignals.cpp
 SRCS+=		Plugins/Process/Utility/MemoryTagManagerAArch64MTE.cpp
 SRCS+=		Plugins/Process/Utility/NativeProcessSoftwareSingleStep.cpp
 SRCS+=		Plugins/Process/Utility/NativeRegisterContextDBReg_arm64.cpp
@@ -435,6 +441,7 @@ SRCS+=		Plugins/Process/Utility/RegisterContextDarwin_i386.cpp
 SRCS+=		Plugins/Process/Utility/RegisterContextDarwin_x86_64.cpp
 SRCS+=		Plugins/Process/Utility/RegisterContextDummy.cpp
 SRCS+=		Plugins/Process/Utility/RegisterContextFreeBSD_i386.cpp
+SRCS+=		Plugins/Process/Utility/RegisterContextFreeBSD_mips64.cpp
 SRCS+=		Plugins/Process/Utility/RegisterContextFreeBSD_x86_64.cpp
 SRCS+=		Plugins/Process/Utility/RegisterContextHistory.cpp
 SRCS+=		Plugins/Process/Utility/RegisterContextLinux_i386.cpp
@@ -446,6 +453,8 @@ SRCS+=		Plugins/Process/Utility/RegisterContextOpenBSD_i386.cpp
 SRCS+=		Plugins/Process/Utility/RegisterContextOpenBSD_x86_64.cpp
 SRCS+=		Plugins/Process/Utility/RegisterContextPOSIX_arm.cpp
 SRCS+=		Plugins/Process/Utility/RegisterContextPOSIX_arm64.cpp
+SRCS+=		Plugins/Process/Utility/RegisterContextPOSIX_mips64.cpp
+SRCS+=		Plugins/Process/Utility/RegisterContextPOSIX_ppc64le.cpp
 SRCS+=		Plugins/Process/Utility/RegisterContextPOSIX_x86.cpp
 SRCS+=		Plugins/Process/Utility/RegisterContextThreadMemory.cpp
 SRCS+=		Plugins/Process/Utility/RegisterContext_x86.cpp
@@ -457,6 +466,7 @@ SRCS+=		Plugins/Process/Utility/ThreadMemory.cpp
 SRCS+=		Plugins/Process/elf-core/ProcessElfCore.cpp
 SRCS+=		Plugins/Process/elf-core/RegisterContextPOSIXCore_arm.cpp
 SRCS+=		Plugins/Process/elf-core/RegisterContextPOSIXCore_arm64.cpp
+SRCS+=		Plugins/Process/elf-core/RegisterContextPOSIXCore_mips64.cpp
 SRCS+=		Plugins/Process/elf-core/RegisterContextPOSIXCore_x86_64.cpp
 SRCS+=		Plugins/Process/elf-core/RegisterUtilities.cpp
 SRCS+=		Plugins/Process/elf-core/ThreadElfCore.cpp
