Revert "remove mips stuff"
This reverts commit 7f0c0470fa0d2ed8e465f964c0395c3929b1fdca.

--- a/lib/clang/libclang/Makefile
+++ b/lib/clang/libclang/Makefile
@@ -219,8 +219,10 @@ SRCS_MIN+=	Basic/Targets/MSP430.cpp
 SRCS_MIN+=	Basic/Targets/NVPTX.cpp
 SRCS_MIN+=	Basic/Targets/OSTargets.cpp
 SRCS_MIN+=	Basic/Targets/PNaCl.cpp
+SRCS_MIN+=	Basic/Targets/PPC.cpp
 SRCS_MIN+=	Basic/Targets/RISCV.cpp
 SRCS_MIN+=	Basic/Targets/SPIR.cpp
+SRCS_MIN+=	Basic/Targets/Sparc.cpp
 SRCS_MIN+=	Basic/Targets/SystemZ.cpp
 SRCS_MIN+=	Basic/Targets/TCE.cpp
 SRCS_MIN+=	Basic/Targets/VE.cpp
@@ -312,7 +314,9 @@ SRCS_MIN+=	Driver/ToolChains/Arch/AArch64.cpp
 SRCS_MIN+=	Driver/ToolChains/Arch/ARM.cpp
 SRCS_MIN+=	Driver/ToolChains/Arch/M68k.cpp
 SRCS_MIN+=	Driver/ToolChains/Arch/Mips.cpp
+SRCS_MIN+=	Driver/ToolChains/Arch/PPC.cpp
 SRCS_MIN+=	Driver/ToolChains/Arch/RISCV.cpp
+SRCS_MIN+=	Driver/ToolChains/Arch/Sparc.cpp
 SRCS_MIN+=	Driver/ToolChains/Arch/SystemZ.cpp
 SRCS_MIN+=	Driver/ToolChains/Arch/VE.cpp
 SRCS_MIN+=	Driver/ToolChains/Arch/X86.cpp
@@ -344,6 +348,7 @@ SRCS_MIN+=	Driver/ToolChains/Myriad.cpp
 SRCS_MIN+=	Driver/ToolChains/NaCl.cpp
 SRCS_MIN+=	Driver/ToolChains/NetBSD.cpp
 SRCS_MIN+=	Driver/ToolChains/OpenBSD.cpp
+SRCS_MIN+=	Driver/ToolChains/PPCLinux.cpp
 SRCS_MIN+=	Driver/ToolChains/PS4CPU.cpp
 SRCS_MIN+=	Driver/ToolChains/RISCVToolchain.cpp
 SRCS_MIN+=	Driver/ToolChains/Solaris.cpp
