--- a/lib/clang/liblldb/Makefile
+++ b/lib/clang/liblldb/Makefile
@@ -318,12 +318,16 @@ SRCS+=		Plugins/ABI/ARM/ABISysV_arm.cpp
 SRCS+=		Plugins/ABI/Mips/ABIMips.cpp
 SRCS+=		Plugins/ABI/Mips/ABISysV_mips.cpp
 SRCS+=		Plugins/ABI/Mips/ABISysV_mips64.cpp
+SRCS+=		Plugins/ABI/PowerPC/ABIPowerPC.cpp
+SRCS+=		Plugins/ABI/PowerPC/ABISysV_ppc.cpp
+SRCS+=		Plugins/ABI/PowerPC/ABISysV_ppc64.cpp
 SRCS+=		Plugins/ABI/X86/ABISysV_i386.cpp
 SRCS+=		Plugins/ABI/X86/ABISysV_x86_64.cpp
 SRCS+=		Plugins/ABI/X86/ABIX86.cpp
 SRCS+=		Plugins/Architecture/AArch64/ArchitectureAArch64.cpp
 SRCS+=		Plugins/Architecture/Arm/ArchitectureArm.cpp
 SRCS+=		Plugins/Architecture/Mips/ArchitectureMips.cpp
+SRCS+=		Plugins/Architecture/PPC64/ArchitecturePPC64.cpp
 SRCS+=		Plugins/Disassembler/LLVMC/DisassemblerLLVMC.cpp
 SRCS+=		Plugins/DynamicLoader/POSIX-DYLD/DYLDRendezvous.cpp
 SRCS+=		Plugins/DynamicLoader/POSIX-DYLD/DynamicLoaderPOSIXDYLD.cpp
@@ -357,6 +361,7 @@ SRCS+=		Plugins/Instruction/ARM/EmulationStateARM.cpp
 SRCS+=		Plugins/Instruction/ARM64/EmulateInstructionARM64.cpp
 SRCS+=		Plugins/Instruction/MIPS/EmulateInstructionMIPS.cpp
 SRCS+=		Plugins/Instruction/MIPS64/EmulateInstructionMIPS64.cpp
+SRCS+=		Plugins/Instruction/PPC64/EmulateInstructionPPC64.cpp
 SRCS+=		Plugins/InstrumentationRuntime/ASan/InstrumentationRuntimeASan.cpp
 SRCS+=		Plugins/InstrumentationRuntime/MainThreadChecker/InstrumentationRuntimeMainThreadChecker.cpp
 SRCS+=		Plugins/InstrumentationRuntime/TSan/InstrumentationRuntimeTSan.cpp
