Import of mport 2.4.5

--- a/libmport/Makefile
+++ b/libmport/Makefile
@@ -9,7 +9,7 @@ SRCS=	asset.c bundle_write.c bundle_read.c plist.c create_primative.c db.c \
 		update_primative.c bundle_read_update_pkg.c pkgmeta.c \
     	fetch.c index.c index_depends.c install.c clean.c setting.c  \
    		stats.c update.c upgrade.c verify.c lock.c mkdir.c import_export.c \
-   		autoremove.c audit.c
+   		autoremove.c audit.c ping.c
 INCS=	mport.h
 
 CFLAGS+=	-I${.CURDIR} -I/usr/include/private/ucl
@@ -20,8 +20,8 @@ WARNS=	3
 
 MK_PROFILE=no
 
-LIBADD=	md archive bz2 lzma z fetch sqlite3 ucl pthread
+LIBADD=	md archive bz2 lzma z fetch sqlite3 ucl pthread util
 
-LDFLAGS+=	-lmd -larchive -lbz2 -llzma -lz -lfetch -lsqlite3 -lpthread -lprivateucl
+LDFLAGS+=	-lmd -larchive -lbz2 -llzma -lz -lfetch -lsqlite3 -lpthread -lprivateucl -lutil
 
 .include <bsd.lib.mk>
