Update mport build

--- a/lib/libmport/Makefile
+++ b/lib/libmport/Makefile
@@ -13,10 +13,10 @@ SRCS=	asset.c bundle_write.c bundle_read.c plist.c create_primative.c db.c \
 	update_primative.c bundle_read_update_pkg.c pkgmeta.c \
     	fetch.c index.c index_depends.c install.c clean.c setting.c  \
    	stats.c verify.c lock.c mkdir.c \
-	import_export.c upgrade.c update.c autoremove.c
+	import_export.c upgrade.c update.c autoremove.c ping.c
 INCS=	mport.h
 
-CFLAGS+=	-I${.CURDIR} -I${MPORTDIR}/libmport -g
+CFLAGS+=	-I${.CURDIR} -I${MPORTDIR}/libmport
 CFLAGS+=-I${SRCTOP}/contrib/libucl/include
 .PATH:  ${SRCTOP}/contrib/libucl/include
 SHLIB_MAJOR=	2
@@ -26,6 +26,6 @@ WARNS=	3
 
 MK_PROFILE=no
 
-LIBADD=	md archive bz2 lzma z fetch sqlite3 ucl pthread
+LIBADD=	md archive bz2 lzma z fetch sqlite3 ucl pthread util
 
 .include <bsd.lib.mk>
