--- a/libexec/mport.check-for-older/Makefile
+++ b/libexec/mport.check-for-older/Makefile
@@ -4,11 +4,13 @@ MPORTDIR= ${SRCTOP}/contrib/mport
 .PATH: ${MPORTDIR}/libexec/mport.check-for-older
 
 CFLAGS+=       -I${MPORTDIR}/libmport 
+CFLAGS+=-I${SRCTOP}/contrib/libucl/include
+.PATH:  ${SRCTOP}/contrib/libucl/include
 
 WARNS?= 	4
 
 MK_MAN= no
 
-LIBADD= mport  pthread
+LIBADD= mport ucl pthread
 
 .include <bsd.prog.mk>
