--- a/libexec/mport.fetch/Makefile
+++ b/libexec/mport.fetch/Makefile
@@ -4,9 +4,11 @@ MPORTDIR= ${SRCTOP}/contrib/mport
 .PATH: ${MPORTDIR}/libexec/mport.fetch
  
 CFLAGS+=       -I${MPORTDIR}/libmport 
+CFLAGS+=-I${SRCTOP}/contrib/libucl/include
+.PATH:  ${SRCTOP}/contrib/libucl/include
 
 MK_MAN= no
 
-LIBADD= mport  pthread
+LIBADD= mport ucl pthread
 
 .include <bsd.prog.mk>
