--- a/lib/libmport/Makefile
+++ b/lib/libmport/Makefile
@@ -13,7 +13,7 @@ SRCS=	asset.c bundle_write.c bundle_read.c plist.c create_primative.c db.c \
 	update_primative.c bundle_read_update_pkg.c pkgmeta.c \
     	fetch.c index.c index_depends.c install.c clean.c setting.c  \
    	stats.c verify.c lock.c mkdir.c \
-	import_export.c upgrade.c update.c autoremove.c ping.c
+	import_export.c upgrade.c update.c autoremove.c ping.c message.c
 INCS=	mport.h
 
 CFLAGS+=	-I${.CURDIR} -I${MPORTDIR}/libmport
