--- a/usr.sbin/mport/Makefile
+++ b/usr.sbin/mport/Makefile
@@ -5,6 +5,9 @@ MPORTDIR= ${SRCTOP}/contrib/mport
 
 CFLAGS= -I${MPORTDIR}/libmport/
 
-LIBADD+=	mport util
+CFLAGS+=-I${SRCTOP}/contrib/libucl/include
+.PATH:  ${SRCTOP}/contrib/libucl/include
+
+LIBADD+=	mport ucl util
 
 .include <bsd.prog.mk>
