fix build issue.

--- a/libexec/mport.list/Makefile
+++ b/libexec/mport.list/Makefile
@@ -3,7 +3,7 @@ PROG= mport.list
 MPORTDIR= ${SRCTOP}/contrib/mport
 .PATH: ${MPORTDIR}/libexec/${PROG}
  
-CFLAGS+=       -I${MPORTDIR}/libmport 
+CFLAGS+=       -I${MPORTDIR}/libmport -I/usr/include/private/ucl
 
 MK_MAN= no
 
