--- a/lib/liblzma/Makefile
+++ b/lib/liblzma/Makefile
@@ -1,3 +1,4 @@
+
 PACKAGE=lib${LIB}
 LIB=		lzma
 LZMADIR=	${SRCTOP}/contrib/xz/src/liblzma
@@ -38,6 +39,7 @@ SRCS+=	common.c \
 	hardware_cputhreads.c \
 	index.c \
 	stream_flags_common.c \
+	string_conversion.c \
 	vli_size.c \
 	alone_encoder.c \
 	block_buffer_encoder.c \
@@ -50,6 +52,9 @@ SRCS+=	common.c \
 	filter_encoder.c \
 	filter_flags_encoder.c \
 	index_encoder.c \
+	lzip_decoder.c \
+	microlzma_encoder.c \
+	microlzma_decoder.c \
 	stream_buffer_encoder.c \
 	stream_encoder.c \
 	stream_flags_encoder.c \
@@ -60,6 +65,7 @@ SRCS+=	common.c \
 	block_decoder.c \
 	block_header_decoder.c \
 	easy_decoder_memusage.c \
+	file_info.c \
 	filter_buffer_decoder.c \
 	filter_decoder.c \
 	filter_flags_decoder.c \
@@ -67,6 +73,7 @@ SRCS+=	common.c \
 	index_hash.c \
 	stream_buffer_decoder.c \
 	stream_decoder.c \
+	stream_decoder_mt.c \
 	stream_flags_decoder.c \
 	stream_encoder_mt.c \
 	vli_decoder.c \
@@ -117,6 +124,7 @@ SRCS+=	simple_coder.c \
 	powerpc.c \
 	ia64.c \
 	arm.c \
+	arm64.c \
 	armthumb.c \
 	sparc.c
 
@@ -158,8 +166,9 @@ FILESDIR=	${LIBDATADIR}/pkgconfig
 liblzma.pc: liblzma.pc.in
 	sed -e 's,@prefix@,/usr,g ; \
 		s,@exec_prefix@,/usr,g ; \
-		s,@libdir@,/usr/lib,g ; \
-		s,@includedir@,/usr/include,g ; \
+		s,@libdir@,${LIBDIR},g ; \
+		s,@sharedlibdir@,${SHLIBDIR},g ; \
+		s,@includedir@,${INCLUDEDIR},g ; \
 		s,@LIBS@,-pthread -lmd,g ; \
 		s,@PACKAGE_URL@,https://tukaani.org/xz/,g ; \
 		s,@PACKAGE_VERSION@,${VERSION_MAJOR}.${VERSION_MINOR}.${VERSION_PATCH},g ; \
