--- a/usr.bin/xz/Makefile
+++ b/usr.bin/xz/Makefile
@@ -1,3 +1,4 @@
+.include <src.opts.mk>
 
 PROG=	xz
 
@@ -41,6 +42,10 @@ WARNS?=	3
 CFLAGS+=	-DHAVE_CONFIG_H \
 		-I${LZMALIBDIR} \
 		-I${XZDIR}/common
+
+.if ${MK_CAPSICUM} == "no"
+CFLAGS+=	-DWITHOUT_CAPSICUM
+.endif
 
 LIBADD=	lzma
 
