update build config

--- a/lib/libarchive/Makefile
+++ b/lib/libarchive/Makefile
@@ -5,8 +5,9 @@ _LIBARCHIVEDIR=	${SRCTOP}/contrib/libarchive
 
 LIB=	archive
 
-LIBADD=	z bz2 lzma bsdxml
-CFLAGS+= -DHAVE_BZLIB_H=1 -DHAVE_LIBLZMA=1 -DHAVE_LZMA_H=1
+LIBADD= z bz2 lzma bsdxml zstd
+CFLAGS+=        -DHAVE_BZLIB_H=1 -DHAVE_LIBLZMA=1 -DHAVE_LZMA_H=1 \
+                -DHAVE_ZSTD_H=1 -DHAVE_LIBZSTD=1 -DHAVE_LIBZSTD_COMPRESSOR=1
 
 # BSD SHLIB_MAJOR value is managed as part of the BSD system.
 # It has no real relation to the libarchive version number.
@@ -14,12 +15,15 @@ SHLIB_MAJOR= 7
 
 CFLAGS+=	-DPLATFORM_CONFIG_H=\"${.CURDIR}/config_midnightbsd.h\"
 CFLAGS+=	-I${.OBJDIR}
+CFLAGS+=	-I${SRCTOP}/sys/contrib/zstd/lib
 
 .if ${MK_OPENSSL} != "no"
-CFLAGS+=	-DWITH_OPENSSL
-LIBADD+=	crypto
+CFLAGS+=        -DWITH_OPENSSL
+CFLAGS+=        -DOPENSSL_API_COMPAT=0x10100000L
+LIBADD+=        crypto
+CFLAGS.archive_hmac.c+=-Wno-error=cast-qual
 .else
-LIBADD+=	md
+LIBADD+=        md
 .endif
 
 .if ${MK_ICONV} != "no"
