--- a/usr.bin/zstd/Makefile
+++ b/usr.bin/zstd/Makefile
@@ -1,10 +1,15 @@
 
 PROG=	zstd
-SRCS=	bench.c \
+SRCS=	\
+	benchfn.c \
+	benchzstd.c \
 	datagen.c \
 	dibio.c \
 	fileio.c \
-	zstdcli.c
+	timefn.c \
+	util.c \
+	zstdcli.c \
+	zstdcli_trace.c
 
 CFLAGS+=	-I${SRCTOP}/sys/contrib/zstd/programs \
 		-I${SRCTOP}/sys/contrib/zstd/lib/common \
@@ -21,6 +26,7 @@ MLINKS=	zstd.1 unzstd.1 \
 	zstd.1 zstdcat.1 \
 	zstd.1 zstdmt.1
 
+CSTD=c11
 WARNS?=	2
 LIBADD=	zstd
 .PATH: ${SRCTOP}/sys/contrib/zstd/programs
