--- a/release/Makefile.ec2
+++ b/release/Makefile.ec2
@@ -43,10 +43,7 @@ cw-ec2-portinstall:
 .if exists(${PORTSDIR}/net/bsdec2-image-upload/Makefile)
 	env - UNAME_r=${UNAME_r} PATH=$$PATH make -C ${PORTSDIR}/net/bsdec2-image-upload BATCH=1 all install clean
 .else
-. if !exists(/usr/local/sbin/pkg-static)
-	env ASSUME_ALWAYS_YES=yes pkg bootstrap -y
-. endif
-	env ASSUME_ALWAYS_YES=yes pkg install -y net/bsdec2-image-upload
+	env ASSUME_ALWAYS_YES=yes mport install net/bsdec2-image-upload
 .endif
 	@touch ${.TARGET}
 
