--- a/release/Makefile.gce
+++ b/release/Makefile.gce
@@ -43,10 +43,7 @@ gce-check-depends:
 .endfor
 .if !exists(/usr/local/bin/gcloud)
 . if !exists(${PORTSDIR}/net/google-cloud-sdk/Makefile)
-.  if !exists(/usr/local/sbin/pkg-static)
-	env ASSUME_ALWAYS_YES=yes pkg bootstrap -yf
-.  endif
-	env ASSUME_ALWAYS_YES=yes pkg install -y net/google-cloud-sdk \
+	env ASSUME_ALWAYS_YES=yes mport install net/google-cloud-sdk \
 		lang/python
 . else
 	env UNAME_r=${UNAME_r} make -C ${PORTSDIR}/net/google-cloud-sdk BATCH=1 all install clean
