--- a/libmport/Makefile
+++ b/libmport/Makefile
@@ -12,7 +12,7 @@ SRCS=	asset.c bundle_write.c bundle_read.c plist.c create_primative.c db.c \
    		autoremove.c audit.c ping.c message.c service.c list.c
 INCS=	mport.h
 
-CFLAGS+=	-I${.CURDIR} -I/usr/include/private/ucl -I/usr/include/ucl
+CFLAGS+=	-I${.CURDIR} -I/usr/include/private/ucl -I/usr/include/ucl -I/usr/include/private/zstd
 SHLIB_MAJOR=	2
 MAN=	mport.3
 
@@ -20,8 +20,8 @@ WARNS=	3
 
 MK_PROFILE=no
 
-LIBADD=	md archive bz2 lzma z fetch sqlite3 ucl pthread util
+LIBADD=	md archive bz2 lzma z fetch sqlite3 ucl pthread util zstd
 
-LDFLAGS+=	-lmd -larchive -lbz2 -llzma -lz -lfetch -lsqlite3 -lpthread -lprivateucl -lutil
+LDFLAGS+=	-lmd -larchive -lbz2 -llzma -lz -lfetch -lsqlite3 -lpthread -lprivateucl -lutil -lprivatezstd
 
 .include <bsd.lib.mk>
